--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "api": "https://temp.com",
+    "api": "https://wally-backend-ymprb4r4ca-uc.a.run.app",
     "fallback_registries": [
         "https://github.com/UpliftGames/wally-index"
     ]
